# pyzome

./: .coveragerc  .flake8  .gitattributes  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci_tests.yml
docs/: requirements.txt
docs/source/: basic.rst  checks.rst  conf.py  index.rst  install.rst  installation.rst  intro.rst  mock_data.rst  qglogp.rst  recipes.rst  tem.rst  usage.rst  whats-new.rst  xarray_accessor.rst  zonal_waves.rst
pyzome/: __init__.py  _version.py  accessor.py  basic.py  checks.py  constants.py  exceptions.py  mock_data.py  qglogp.py  recipes.py  tem.py  testing.py  zonal_waves.py
pyzome/recipes/: __init__.py  zmd.py
pyzome/tests/: test_basic_simple.py  test_checks.py
tests/: test_accessor.py  test_basic.py  test_checks.py  test_mock_data.py  test_qglogp.py  test_recipes_zmd.py  test_tem.py  test_zonal_waves.py
