[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzome"
version = "0.0.3"
authors = [
    {name = "Zachary D. Lawrence", email = "zachary.lawrence@colorado.edu"},
]
description = "A collection of tools for computing zonal mean and other related atmospheric circulation diagnostics"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["meteorology", "physics"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Intended Audience :: Science/Research",

]
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "xrft",
]

[project.urls]
"Source Code" = "https://github.com/zdlawrence/pyzome"
"Bug Tracker" = "https://github.com/zdlawrence/pyzome/issues"